PROJECT(subtopicmodel)
SET(PROJECT_ROOT_PATH "${CMAKE_SOURCE_DIR}")
SET(LIBRARY_OUTPUT_PATH "${PROJECT_ROOT_PATH}/lib/")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g  -fopenmp -Wall -O2")  
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g  -fopenmp -Wall -O2")
INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/include/")
SET(EXECUTABLE_OUTPUT_PATH "${PROJECT_ROOT_PATH}/demo/")
INCLUDE_DIRECTORIES("${PROJECT_ROOT_PATH}/thirdparty/include")
LINK_DIRECTORIES("${PROJECT_ROOT_PATH}/thirdparty/lib")
LINK_DIRECTORIES("${PROJECT_ROOT_PATH}/lib")
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(demo)


